# Hackaton-BAIA

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: data-task.md  feature.md
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: README.md
data/sample/: README.md
docs/: Plano.md  data_dictionary.md  methodology.md  project_overview.md
examples/: config_score_exemplo.json  indicadores_exemplo.csv  scores_municipios.csv
scripts/: baixar_dataset_inmet.py  baixar_municipios_ibge.py  build_scores.py  create_dev_climate_sample.py
src/municipios_score/: __init__.py  arquetipos.py  cli.py  config.py  ia.py  indices_climaticos.py  io.py  projecao.py  scoring.py  vulnerabilidade.py
tests/: test_arquetipos_projecao.py  test_indices_climaticos.py  test_scoring.py  test_vulnerabilidade.py
