[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "municipios-score"
version = "0.1.0"
description = "Pipeline para calcular scores de municipios a partir de indicadores."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "shapely>=2.0",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
app = [
  "streamlit>=1.35",
  "streamlit-folium>=0.21",
  "folium>=0.20",
  "openai>=1.40",
  "anthropic>=0.40",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

